--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
   </section>
 
-  <!-- footer -->
+  <!-- footer Section-->
   <footer class="site-footer">
     <p>&copy; 2025 My CSS Box Model</p>
   </footer>
