--- a/index.html
+++ b/index.html
@@ -16,5 +16,17 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          Hi! My name is Magret Faith and I am learning CSS. This is my first
+          website where I practice using margins, padding, and borders.
+        </p>
+        <p>
+          I am a student and I like learning new things about web development.
+        </p>
+      </section>
+    </main>
   </body>
 </html>
