Add Hobbies section with hobby boxes and button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,28 @@
           I am a student and I like learning new things about web development.
         </p>
       </section>
+
+      <section id="hobbies">
+        <h2>My Hobbies</h2>
+        <p>Here are some things I enjoy doing in my free time:</p>
+
+        <div class="hobby-box">
+          <h3>Reading Books</h3>
+          <p>I love reading mystery novels and fantasy stories.</p>
+        </div>
+
+        <div class="hobby-box">
+          <h3>Playing Soccer</h3>
+          <p>I play soccer every weekend with my friends at the park.</p>
+        </div>
+
+        <div class="hobby-box">
+          <h3>Drawing</h3>
+          <p>I like to draw animals and nature scenes with colored pencils.</p>
+        </div>
+
+        <button class="my-button">Learn More About My Hobbies</button>
+      </section>
     </main>
   </body>
 </html>
