Include Contact section with email, school, and level

--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
 
         <button class="my-button">Learn More About My Hobbies</button>
       </section>
+
+      <section id="contact">
+        <h2>Contact Me</h2>
+        <p>If you want to get in touch with me, here is my information:</p>
+        <div class="contact-info">
+          <p><strong>Email:</strong> magret.student@email.com</p>
+          <p><strong>School:</strong> PLP Web Development Academy</p>
+          <p><strong>Level:</strong> Beginner-Friendly</p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
