Add footer with author name and year

--- a/index.html
+++ b/index.html
@@ -60,5 +60,8 @@
         </div>
       </section>
     </main>
+    <footer>
+      <p>Thank you for visiting my website! Made by Magret Faith - 2025</p>
+    </footer>
   </body>
 </html>
