Add more recipe cards

--- a/index.html
+++ b/index.html
@@ -94,6 +94,52 @@
       <button class="cta-btn">Try This Recipe</button>
     </section>
 
+        <!-- Recipe Card 4 -->
+    <section class="recipe-card">
+      <h2>🥙 Smocha (Samosa + Chapati)</h2>
+      <img src="https://via.placeholder.com/300x200" alt="Smocha">
+      <h3>Ingredients:</h3>
+      <ul>
+        <li>1 Chapati</li>
+        <li>1 Samosa</li>
+        <li>1 tbsp Tomato sauce</li>
+        <li>1 tbsp Chili sauce (optional)</li>
+      </ul>
+      <h3>Instructions:</h3>
+      <ol>
+        <li>Warm the chapati on a pan.</li>
+        <li>Place the samosa in the middle.</li>
+        <li>Add tomato sauce (and chili if desired).</li>
+        <li>Roll the chapati around the samosa tightly.</li>
+        <li>Enjoy your Smocha!</li>
+      </ol>
+      <button class="cta-btn">Try This Recipe</button>
+    </section>
+
+        <!-- Recipe Card 5 -->
+    <section class="recipe-card">
+      <h2>🌽 Mahindi Choma (Roasted Maize)</h2>
+      <img src="https://via.placeholder.com/300x200" alt="Mahindi Choma">
+      <h3>Ingredients:</h3>
+      <ul>
+        <li>1 Fresh maize (corn on the cob)</li>
+        <li>1/2 tsp Salt</li>
+        <li>1 Lemon (optional, for squeezing)</li>
+        <li>Chili powder (optional)</li>
+      </ul>
+      <h3>Instructions:</h3>
+      <ol>
+        <li>Peel back the husk of the maize (optional).</li>
+        <li>Roast the maize over hot charcoal, turning regularly.</li>
+        <li>Remove once kernels are golden brown and slightly charred.</li>
+        <li>Rub with salt, chili, and lemon juice for extra flavor.</li>
+        <li>Enjoy hot straight from the cob!</li>
+      </ol>
+      <button class="cta-btn">Try This Recipe</button>
+    </section>
+
+
+
   </main>
 
   <!-- Footer -->
