Add the footer section with links

--- a/index.html
+++ b/index.html
@@ -143,8 +143,15 @@
   </main>
 
   <!-- Footer -->
-  <footer class="site-footer">
-    <p>&copy; 2025 My Recipe Website | Made with ❤️</p>
+  <footer class="footer">
+    <p>🍲 Delicious Recipes &copy; 2025 | Made with ❤️ by Immaculate</p>
+    <div class="footer-links">
+      <a href="#">Privacy Policy</a>
+      <a href="#">Terms</a>
+      <a href="#">Contact</a>
+    </div>
   </footer>
 </body>
 </html>
+
+ 
