--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Recipe Card 1 -->
     <section class="recipe-card">
       <h2>🥞 Classic Pancakes</h2>
-      <img src="https://via.placeholder.com/300x200" alt="Pancakes">
+      <img src="images/pancake.png" alt="Pancakes">
       <h3>Ingredients:</h3>
       <ul>
         <li>1 cup flour</li>
@@ -51,7 +51,7 @@
     <!-- Recipe Card 2 -->
     <section class="recipe-card">
       <h2>🍝 Spaghetti Bolognese</h2>
-      <img src="https://via.placeholder.com/300x200" alt="Spaghetti">
+      <img src="images/spaghetti.png" alt="Spaghetti">
       <h3>Ingredients:</h3>
       <ul>
         <li>200g spaghetti</li>
@@ -74,7 +74,7 @@
     <!-- Recipe Card 3 -->
     <section class="recipe-card">
       <h2>🥗 Fresh Salad</h2>
-      <img src="https://via.placeholder.com/300x200" alt="Salad">
+      <img src="images/salad.png" alt="Salad">
       <h3>Ingredients:</h3>
       <ul>
         <li>1 cucumber</li>
@@ -97,7 +97,7 @@
         <!-- Recipe Card 4 -->
     <section class="recipe-card">
       <h2>🥙 Smocha (Samosa + Chapati)</h2>
-      <img src="https://via.placeholder.com/300x200" alt="Smocha">
+      <img src="images/smocha.png" alt="Smocha">
       <h3>Ingredients:</h3>
       <ul>
         <li>1 Chapati</li>
@@ -119,7 +119,7 @@
         <!-- Recipe Card 5 -->
     <section class="recipe-card">
       <h2>🌽 Mahindi Choma (Roasted Maize)</h2>
-      <img src="https://via.placeholder.com/300x200" alt="Mahindi Choma">
+      <img src="images/mahindi.png" alt="Mahindi Choma">
       <h3>Ingredients:</h3>
       <ul>
         <li>1 Fresh maize (corn on the cob)</li>
